--- a/Lab_5/index.html
+++ b/Lab_5/index.html
@@ -287,7 +287,7 @@
             for(let i=0; i < 50; i++){
             const selectNumber = getRandomIntInclusive(0,242);
             let el = document.createElement("li");
-            el.innerText = nameArray(selectNumber);
+            el.innerText = nameArray[selectNumber];
             instructions.appendChild(el);
            };
           }
