--- a/Lab_6/index.html
+++ b/Lab_6/index.html
@@ -16,33 +16,23 @@
     </div>
     <script>
       function loadData() {
-        fetch("ajax_sample.json")
+        fetch('ajax_sample.json')
           .then(res => res.json())
           .then(res => res.map(c => c.name))
           .then(codes => {
-            const a = codes.map(item => {
-              const instructions = document.querySelector(".instructions");
-              instructions.innerHTML = "";
+            const instructions = document.querySelector(".content");
+            content.innerHTML = "";
 
-              for (let i = 0; i < 15; i++) {
-                const selectNumber = getRandomIntInclusive(0, 242);
-                let el = document.createElement("li");
+            for (let i = 0; i < 15; i++) {
+              const selectNumber = getRandomIntInclusive(0, 242);
+              let el = document.createElement("ol");
 
-                el.innerText = codes[selectNumber];
-                instructions.appendChild(el);
-              console.log("i'm a demo!", item);
-              return item + "extra";
-            };
-            document.querySelector(".content").innerText = codes;
-            console.log("the returned values of a", a);
-            return codes;
-          });
-        function getRandomIntInclusive(min, max) {
-          min = Math.ceil(min);
-          max = Math.floor(max);
-          return Math.floor(Math.random() * (max - min + 1)) + min; //The maximum is inclusive and the minimum is inclusive
-        }
-          }
+              el.innerText = codes[selectNumber];
+              list.appendChild(el);
+            }
+            return content;
+          })
+      }
     </script>
   </body>
 </html>
