--- a/Lab_6/index.html
+++ b/Lab_6/index.html
@@ -16,11 +16,11 @@
     </div>
     <script>
       function loadData() {
-        fetch('ajax_sample.json')
+        fetch("ajax_sample.json")
           .then(res => res.json())
           .then(res => res.map(c => c.name))
           .then(codes => {
-            const instructions = document.querySelector(".content");
+            const content = document.querySelector(".content");
             content.innerHTML = "";
 
             for (let i = 0; i < 15; i++) {
@@ -28,10 +28,15 @@
               let el = document.createElement("ol");
 
               el.innerText = codes[selectNumber];
-              list.appendChild(el);
+              content.appendChild(el);
             }
             return content;
-          })
+          });
+      }
+      function getRandomIntInclusive(min, max) {
+        min = Math.ceil(min);
+        max = Math.floor(max);
+        return Math.floor(Math.random() * (max - min + 1)) + min; //The maximum is inclusive and the minimum is inclusive
       }
     </script>
   </body>
