--- a/Lab_7/index.html
+++ b/Lab_7/index.html
@@ -24,7 +24,7 @@
             data.push(" 151 Kyle Route");
 
             const content = document.querySelector(".content");
-            content.innerHTML = "";
+            content.innerHTML = " ";
             let el = document.createElement("li");
             let array = [];
 
@@ -32,7 +32,8 @@
             header.innerHTML = "UMD Bus Routes" + data[25];
 
             for (i = 0; i< res.length; i++){
-              array += ("<li>"+res [i].title+"</li>");
+
+              array += ( "<li>"+res [i].title +"</li>");
             }
             console.log(data[25]);
             console.log(array[4]);
@@ -40,7 +41,7 @@
             return array;
           })
           .then()
-          .then(data => document.querySelector(".content").innerText = data);
+          .then(data => document.querySelector(".content").innerHTML = data);
       }
     </script>
   </body>
